--- a/style/style.css
+++ b/style/style.css
@@ -175,7 +175,7 @@
 
 .box-continerr{
 
-  width: 1600px;
+  max-width: 1600px;
   height: 1121px;
   margin: 0 auto;
   background-color: #230E3D;
@@ -289,6 +289,66 @@ grid-area: card-name4;
 }
 
 
+/* Featured-continer */
+
+.Featured-continer{
+  max-width: 1600px;
+  height: 1276px;
+  margin: 0 auto;
+  background-color: #1A0B2E;
+  border: 1px solid #1A0B2E ;
+}
+
+.Featured-name{
+  max-width: 1200px;
+  font-size:48px ;
+  font-weight:700px ;
+  color: #FFFFFF;
+  text-align: center;
+  margin:120px 200px 0px 200px;
+}
+
+.Featured-bax{
+  max-width: 1200px;
+  display: flex;
+  /* justify-content: center; */
+  /* text-align: center; */
+  /* align-items: center; */
+  margin: 0 auto;
+  /* border: 2px solid wheat; */
+  gap: 30px;
+ 
+}
+
+.Featured-card{
+  /* max-width: 380px; */
+  background-color: #250D44;
+
+
+}
+.Featured-video{
+  /* max-width: 380px; */
+  padding: 10px;
+
+
+}
+.video-name{
+  font-size: 24px;
+  font-weight: 700px;
+  color: #FFFFFF;
+  /* max-width: 332px; */
+  padding: 10px;
+  /* margin-top: 12px; */
+}
+
+.video-name-ex{
+
+  font-size: 16px;
+  color: #FFFFFF;
+  padding: 10px;
+  /* margin: 12px; */
+}
+
 
 
 
@@ -340,6 +400,15 @@ grid-area: card-name4;
 
   
 }
+.box-continerr{
+
+  max-width: 1600px;
+  height: 700px;
+  margin: 0 auto;
+  background-color: #230E3D;
+  border: 1px solid #230E3D ;
+}
+
 
 
 
