--- a/style/style.css
+++ b/style/style.css
@@ -362,14 +362,86 @@ grid-area: card-name4;
 
 .host-continer{
   max-width: 1200px;
+  margin: 0 auto;
   display: flex;
-  align-items: center;
+  /* align-items: center; */
+  /* text-align: center; */
+  border: #250D44;
 }
 
 
 
 .host-name{
   /* display: flex; */
+  max-width: 896px;
+  font-size: 32px;
+  font-weight: 700px;
+  color: #FFFFFF;
+}
+
+.host-ex{
+  font-size: 16px;
+  max-width: 896px;
+  color:#FFFFFF ;
+}
+
+.footer-continer{
+  max-width: 1600px;
+  margin: 0 auto;
+  background: url(../assets/footer-bg.png);
+  border: 1px solid #1A0B2E;
+}
+
+.footer-name{
+  max-width: 410px;
+  margin: 130px 595px 0px 595px;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.linea{
+  background: linear-gradient(#F7E93F,#FB09B4,#9100F8);
+
+}
+
+.footer-box{
+  max-width: 444px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  /* border: 2px solid wheat; */
+}
+
+.footer-ex{
+
+  font-size: 16px;
+  font-weight: 500px;
+  color: #FFFFFF;
+  /* border: 2px solid wheat; */
+
+}
+
+.footer-card-1{
+
+  max-width: 87px;
+  /* gap: 8px; */
+}
+
+.footer-b{
+  margin: 1360px;
+  margin: 0 auto;
+  /* border: 2px solid wheat; */
+
+
+}
+
+.footer-small{
+ 
+  color: #FAFAFA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
@@ -395,7 +467,7 @@ grid-area: card-name4;
 }
 
 .about-item{
-
+  
   
 }
 
